@@ -1,4 +1,4 @@
 DIST subsonic-4.4-src.zip 8214761 RMD160 fbadab0031221c7a20ff56b526ce6f63a9d79c7b SHA1 f27c30bfa6934c086f1ecce7cef2620564f26598 SHA256 365976466bef3cfa990d779c5ff757f31c9de26990bc2e5e4a7151885efbe229
-EBUILD subsonic-4.4.ebuild 1572 RMD160 7c2a2927f591eaf9dec9c47df0d5c0c56c91c787 SHA1 68a683829e40344237f3d54d97f818e392cf0134 SHA256 fc6cdd5a372b181b0f8c6992ef252aaefbd863bf7478e7150f0aa981e5282279
-MISC ChangeLog 700 RMD160 456d2ace936e2bbb88e0ed55a96731d76341d5d2 SHA1 a0856c75c858a83acd352604fad2dca6f62c13cd SHA256 614dba8d0693ba245f2933d66e1b76b65493976fd99bf12836b28727b72a181b
+EBUILD subsonic-4.4.ebuild 1784 RMD160 1bd8d9b861fb5f908745afc24b6abb986b32f997 SHA1 4dfaa3316abc62bad2e1c57659822048afb3376d SHA256 62adda402efc92145e8ff59750d9450ef328358cebcebe338c2c39a1d9cac852
+MISC ChangeLog 929 RMD160 bb2f73db4f289febd150b6cca366fe48ab07082c SHA1 3eb5c185b0b282984cfd54b797ff3428fe9adde4 SHA256 42175849c47974aa2ff4b325d9d8b6017e7c1edd1ea70dd47d0877e3a2b67863
 MISC metadata.xml 221 RMD160 52dde43b09fd52c7fca2d101da4536746167b29f SHA1 ce96a105913fc721fb928a0d8216b11fa387b869 SHA256 d114187ee5bb84d05e5d0654deb9148f2b4100c127266eca82b49ba011941616
